# SwitchPortManager

./: .dockerignore  .env.example  .env.prod-minimal.example  .env.production  .env.syslog.example  .env.test  .gitignore  CHANGELOG.md  CI_CD_SETUP.md  CLEANUP_SUMMARY.md  CPU_THRESHOLD_UPDATE_SUMMARY.md  DELETE_CONFIRMATION_FIX.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NOTES_v2.1.3.md  DEPLOYMENT_NOTES_v2.2.0.md  DEPLOYMENT_UPDATE_SUMMARY.md  DEVOPS_GUIDE.md  DEVOPS_HANDOFF.md  DOCKER-COMPOSE.md  DOCKER_DEPLOYMENT.md  DOCKER_DEPLOYMENT_TROUBLESHOOTING.md  DOCUMENTATION-UPDATES.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  Dockerfile.dev  Dockerfile.production  Dockerfile.staging  FINAL-STATUS.md  GITHUB_SECRETS.txt  GIT_UPDATE_STRATEGY.md  HEADER_NAVBAR_ANALYSIS.md  INTERFACE_RANGE_FIX_SUMMARY.md  K8S_DEPLOYMENT_SUMMARY.md  LICENSE  MANIFEST.in  PERFORMANCE_OPTIMIZATION.md  PORT_STATUS_FIX_COMPLETE.md  PRODUCTION_DEPLOYMENT_PLAN.md  README.md  (+113 more)
.github/workflows/: build-and-push.yml  deploy-prod.yml  deploy-prod.yml.disabled  deploy.yml  simple-ci.yml  test-registry.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes.py
app/auth/: __init__.py  auth.py  nt_auth.py
app/core/: __init__.py  database.py  init_db.py  switch_manager.py  utils.py  vlan_manager.py
app/monitoring/: __init__.py  cpu_monitor.py  switch_monitor.py
app/utils/: api_utils.py  logging_utils.py
architecture/: README.md  dev-team.md  network-team.md  server-team.md
config/: .env.example  kmc-port-tracer.conf
docs/: API_DOCUMENTATION.md  DEBUG_LOGGING_CLEANUP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DEVOPS_GUIDE.md  DISCOVERY_COMPLETION_REPORT.md  DOCKER_DEPLOYMENT_REMEDIATION.md  DOCKER_PACKAGES.md  FRESH_SERVER_DEPLOYMENT.md  GIT_BRANCHING_STRATEGY.md  K8S_DEPLOYMENT_SUMMARY.md  PRODUCTION_TROUBLESHOOTING.md  README-NETADMIN-TEAM.md  README-OSS-TEAM.md  README.md  REPOSITORY_AUDIT.md  SESSION_MANAGEMENT_TECHNICAL.md  USER_GUIDE.md  VERSIONING_STRATEGY.md  VISUAL_USER_GUIDE.md  VLAN_MANAGEMENT_TECHNICAL.md
instance/: switches.db
k8s/: db-credentials-secret.yaml  k8s-deployment.yaml  postgres-deployment.yaml
monitoring/: performance_monitor.py
scripts/: deploy-production.sh  deploy.ps1  deploy.sh  security-check.sh
static/: navigation.css  styles.css
static/js/: main.js
templates/: inventory.html  main.html  vlan.html
templates/auth/: login.html
tests/: __init__.py  test_basic.py  test_simple.py
tests/integration/: __init__.py  test_deployment.py
tests/unit/: __init__.py
tools/: debug-windows-auth.py  fix-nginx-config.sh  test-ldap-connection.py  test-windows-auth.py
