[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dell-switch-port-tracer"
version = "2.2.4"
description = "Web-based port tracing and VLAN management for Dell switches"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Dell Port Tracer Team", email = "support@example.com"}
]
maintainers = [
    {name = "Dell Port Tracer Team", email = "support@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
keywords = ["dell", "switch", "networking", "vlan", "port-tracing"]
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.3.0",
    "paramiko>=3.3.0",
    "python-dotenv>=1.0.0",
    "Flask-HTTPAuth>=4.7.0",
    "Flask-SQLAlchemy>=3.0.5",
    "Flask-Migrate>=4.0.5",
    "psycopg2-binary>=2.9.0",
    "ldap3>=2.9.1",
    "psutil>=5.9.0",
    "cryptography>=3.4.8",
    "bcrypt>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "pytest-flask>=1.2.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
production = [
    "gunicorn>=20.1.0",
    "supervisor>=4.2.4",
]

[project.urls]
"Homepage" = "https://github.com/Crispy-Pasta/SwitchPortManager"
"Repository" = "https://github.com/Crispy-Pasta/SwitchPortManager.git"
"Issues" = "https://github.com/Crispy-Pasta/SwitchPortManager/issues"
"Documentation" = "https://github.com/Crispy-Pasta/SwitchPortManager/tree/main/docs"

[project.scripts]
port-tracer = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
app = ["templates/**/*", "static/**/*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
